# torot

./: Cargo.toml  Makefile  README.md  index.html  install.sh  package.json  pyproject.toml  setup.py  update.sh  usage.md  vite.config.ts
.github/workflows/: ci.yml
completions/: torot.bash  torot.fish  torot.zsh
config/: default-config.json  report-template.md
docs/: architecture.md  examples.md  tools.md
scripts/: gen-icons.sh
src/: App.tsx  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/agents/: swarm.ts
src/app/: cli.rs  tui.rs
src/components/: FindingView.tsx  FindingsView.css  FindingsView.tsx  HistoryView.tsx  HomeView.css  HomeView.tsx  ScanView.css  ScanView.tsx  SettingsView.tsx  Sidebar.css  Sidebar.tsx  Titlebar.css  Titlebar.tsx  ToolsView.tsx
src/core/: config.rs  db.rs  engine.rs  event.rs  knowledge.rs  mod.rs  parser.rs  report.rs  sandbox.rs  state.rs  tools.rs  types.rs
src/lib/: api.ts  store.ts
src/rules/: engine.ts
src/styles/: app.css  global.css
src/swarm/: circuit_breaker.rs  coordinator.rs  executor.rs  mod.rs  planner.rs
src/tui/: app.rs  mod.rs  widgets.rs
src/tui/views/: findings.rs  history.rs  home.rs  mod.rs  scan.rs  settings.rs  theme.rs  tools.rs
src/util/: fmt.rs  mod.rs  path.rs  time.rs
tests/: config_test.rs  parser_test.rs  report_test.rs  tools_test.rs
torot/: __init__.py  cli.py
torot/agents/: brain.py  controller.py  orchestrator.py
torot/core/: __init__.py  api_enricher.py  detector.py  engine.py  models.py  report.py  reproduction.py  updater.py
torot/memory/: store.py
torot/report/: __init__.py  generator.py
torot/scanners/: __init__.py  all_scanners.py  base.py  slither_scanner.py
torot/tools/: registry.py
torot/tui/: __init__.py  dashboard.py
torot/ui/: app.py  wizard.py
