[package]
name = "torot"
version = "4.0.0"
description = "Torot v4 — autonomous bug bounty orchestration platform"
authors = ["Torot Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Chintanpatel24/torot"
repository = "https://github.com/Chintanpatel24/torot"
keywords = ["security", "bug-bounty", "recon", "automation", "pentesting"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[lib]
name = "torot_lib"
path = "src/lib.rs"

[[bin]]
name = "torot"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
which = "6"
glob = "0.3"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
