[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "torot"
version     = "2.0.0"
description = "Universal Security Agent — orchestrates 40+ tools across blockchain, web, binary, and API security"
readme      = "README.md"
license     = {text = "MIT"}
authors     = [{name = "Torot Contributors"}]
keywords    = ["security", "blockchain", "smart-contracts", "hacking", "bug-bounty", "agent"]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
torot = "torot.cli:main"

[project.urls]
Homepage   = "https://github.com/your-org/torot"
Repository = "https://github.com/your-org/torot"

[tool.setuptools.packages.find]
where   = ["."]
include = ["torot*"]
