[package]
name        = "torot"
version     = "4.0.0"
description = "Torot v4 — bug bounty orchestration platform"
authors     = ["Torot Contributors"]
license     = "MIT"
edition     = "2021"

[lib]
name       = "torot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "torot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = [] }
tauri-plugin-fs           = "2"
tauri-plugin-shell        = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-notification = "2"
tauri-plugin-store        = "2"
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
tokio                     = { version = "1", features = ["full"] }
anyhow                    = "1"
uuid                      = { version = "1", features = ["v4"] }
rusqlite                  = { version = "0.31", features = ["bundled"] }
which                     = "6"
glob                      = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level     = "s"
strip         = true
lto           = true
codegen-units = 1
panic         = "abort"
